--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,7 @@
     <string name="task_time">Task time</string>
     <string name="alarm_clock">Alarm clock</string>
     <string name="select_day_spinner_hint">Select day</string>
+    <string name="delete_task_confirm">Are you sure you want to delete this task?</string>
 
 
     <string-array name="daysOfWeekend">
