--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,6 +93,8 @@
     <string name="alarm_clock">Alarm clock</string>
     <string name="select_day_spinner_hint">Select day</string>
     <string name="delete_task_confirm">Are you sure you want to delete this task?</string>
+    <string name="tasks">Tasks</string>
+    <string name="goals">Goals</string>
 
 
     <string-array name="daysOfWeekend">
