--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,6 +96,8 @@
     <string name="delete_task_confirm">Are you sure you want to delete this task?</string>
     <string name="tasks">Tasks</string>
     <string name="goals">Goals</string>
+    <string name="for_s">For</string>
+    <string name="it_s_time_to">It\'s time to</string>
 
 
     <string-array name="daysOfWeekend">
