--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,6 +99,8 @@
     <string name="for_s">For</string>
     <string name="it_s_time_to">It\'s time to</string>
     <string name="stop_alarm">Stop Alarm</string>
+    <string name="widget_tasks_for_day_title">Tasks for today</string>
+    <string name="widget_empty">No tasks</string>
 
 
     <string-array name="daysOfWeekend">
